# DSApp

./: Cargo.toml  README.md  index.html
.github/workflows/: pages.yml
assets/: manifest.json  sw.js
src/: apmods.rs  app.rs  character_talents.rs  cost.rs  data.rs  debugger.rs  display.rs  erfahrungsgrade.rs  kampf.rs  lib.rs  liturgy.rs  macros.rs  math.rs  properties.rs  roll.rs  spells.rs  spells_index.rs  sprachen_schriften.rs  talent.rs  talents_view.rs  views.rs
src/profession/: geweihte.rs  mod.rs  profession.rs
src/profession/weltlich/: kaempfer.rs  mod.rs  ordensleute.rs  profane.rs
src/profession/zauberer/: animisten.rs  druiden.rs  elfen.rs  geoden.rs  hexen.rs  kristallomant.rs  magiedilettanten.rs  mod.rs  qabaloth.rs  runenschoepfer.rs  scharlatane.rs  schelme.rs  zauberalchemisten.rs  zauberbarden.rs  zaubertaenzer.rs  zibilja.rs
src/profession/zauberer/gildenmagier/: gildenlose_magier.rs  graue_gilde.rs  mod.rs  schwarze_gilde.rs  weisse_gilde.rs
src/properties/: character.rs  strings.rs
src/spezies/: achaz.rs  elfen.rs  halbelfen.rs  halborks.rs  holberker.rs  menschen.rs  mod.rs  orks.rs  zwerge.rs
src/views/: character.rs
src/vorteile/: mod.rs  nachteile.rs  vorteile.rs
src/widgets/: decimal.rs  infobutton.rs  mod.rs
